--- a/my style.css
+++ b/my style.css
@@ -20,12 +20,16 @@ main {
 
 .job-container {
   background: #fff;
-  border: 1px solid #ddd;
   border-radius: 8px;
   padding: 20px;
   margin: 10px 0;
   width: 90%;
+  max-width: 1100px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .job-container:hover {
@@ -35,23 +39,70 @@ main {
 .job-header {
   display: flex;
   align-items: center;
+  flex: 1 1 50%;
+  max-width: 50%;
 }
 
 .job-header img {
   width: 50px;
   height: 50px;
   margin-right: 15px;
+  border-radius: 50%;
+}
+
+.job-header div {
+  display: flex;
+  flex-direction: column;
 }
 
 .job-header h2 {
   margin: 0;
   font-size: 1.5em;
+  display: flex;
+  align-items: center;
+}
+
+.job-header h2 .new {
+  background: #5ba4a4;
+  color: white;
+  font-size: 0.75em;
+  padding: 5px 10px;
+  border-radius: 12px;
+  margin-left: 10px;
 }
 
 .job-details {
-  display: flex;
-  justify-content: space-between;
   margin-top: 10px;
   font-size: 0.9em;
-  color: #777;
+  color: #7b8e8e;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.job-details span {
+  margin-right: 20px;
+}
+
+.job-tags {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end; /* Align tags to the right */
+  align-items: center; /* Vertically center tags */
+  margin-left: auto;
+}
+
+.job-tag {
+  background: #eef6f6;
+  color: #5ba4a4;
+  font-weight: bold;
+  margin: 5px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.job-tag:hover {
+  background: #5ba4a4;
+  color: white;
 }
